🚂 Add Railway deployment configuration
✨ Railway Integration:
- railway.json configuration for deployment settings
- railway.config.js for build and environment setup
- Updated start-dev.js for Railway compatibility
- Added Railway deployment scripts to package.json

📚 Documentation:
- Comprehensive RAILWAY_DEPLOYMENT.md guide
- Multiple deployment methods (CLI, GitHub, Dashboard)
- Troubleshooting and monitoring instructions
- Auto-deploy configuration

🔧 Configuration:
- Environment variable setup
- Port configuration for Railway
- Health check configuration
- Production-ready server setup

🚀 Ready for Railway deployment at:
https://railway.com/project/aadc3cae-41eb-464d-817f-d00380087e94

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "serve": "npx serve .",
     "live": "npx live-server .",
     "build": "echo 'Build process would go here'",
-    "test": "echo 'Tests would go here'"
+    "test": "echo 'Tests would go here'",
+    "railway:deploy": "railway up",
+    "railway:logs": "railway logs"
   },
   "keywords": [
     "influencer-marketing",
