--- a/package.json
+++ b/package.json
@@ -27,7 +27,14 @@
     "live-server": "^1.2.2",
     "serve": "^14.2.1"
   },
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.11.3",
+    "dotenv": "^16.3.1"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/hcs412/Formative.git"
