🔧 Security & Code Quality Improvements
- Fix duplicate handleLogin bug in index.html
- Extract inline styles to dedicated CSS files (landing.css, dashboard.css)
- Add rate limiting to backend (auth, register, general API)
- Add express-validator for input validation
- Add helmet for security headers
- Implement standardized API response format with error codes
- Add graceful shutdown handlers
- Improve error handling across all endpoints

--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,10 @@
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.0.1",
+    "helmet": "^7.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
@@ -32,3 +35,5 @@
   "author": "Formative Team",
   "license": "MIT"
 }
+
+
