Add React + Vite frontend with Tailwind CSS
Major architecture update:
- Created React SPA in client/ folder
- Set up Vite with Tailwind CSS v4
- Built reusable UI components (Button, Modal, Card, Avatar, Toast)
- Created auth context with API utilities
- Built pages: Landing, Login, Register, Dashboard, Messages
- Beautiful dark theme matching existing design
- Clean modal-based messaging system
- Responsive sidebar navigation

Backend updates:
- Express now serves React build from dist/
- Added fallback to old static files if React build missing
- SPA catch-all route for React Router

--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "formative-platform",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "A modern influencer marketing platform that connects brands, influencers, and freelancers",
-  "main": "index.html",
+  "main": "backend/server.js",
   "scripts": {
-    "start": "node start-dev.js",
-    "dev": "node start-dev.js",
+    "start": "node backend/server.js",
+    "dev": "cd client && npm run dev",
+    "build": "cd client && npm install && npm run build",
+    "build:client": "cd client && npm run build",
     "serve": "npx serve .",
-    "live": "npx live-server .",
-    "build": "echo 'Build process would go here'",
     "test": "echo 'Tests would go here'",
     "railway:deploy": "railway up",
     "railway:logs": "railway logs"
