--- a/package.json
+++ b/package.json
@@ -20,20 +20,20 @@
   "author": "Formative Team",
   "license": "MIT",
   "devDependencies": {
+    "dotenv": "^17.2.3",
     "live-server": "^1.2.2",
     "serve": "^14.2.1"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "pg": "^8.11.3",
-    "dotenv": "^16.3.1",
-    "node-fetch": "^2.7.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
-    "helmet": "^7.1.0"
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "node-fetch": "^2.7.0",
+    "pg": "^8.11.3"
   },
   "repository": {
     "type": "git",
